ffi/include/rfe.h


typedef enum Result {
  RESULT_SUCCESS = 0,
  RESULT_INCOMPATIBLE_FIRMWARE_ERROR,
  RESULT_INVALID_INPUT_ERROR,
  RESULT_INVALID_OPERATION_ERROR,
  RESULT_IO_ERROR,
  RESULT_NO_DATA,
  RESULT_NULL_PTR_ERROR,
  RESULT_TIMEOUT_ERROR,
} Result;
typedef uint8_t Attenuation;
typedef uint8_t PowerLevel;
typedef uint8_t RfPower;
typedef uint8_t SpectrumAnalyzerModel;
typedef struct SignalGenerator SignalGenerator;
typedef struct SpectrumAnalyzer SpectrumAnalyzer;
typedef struct SignalGeneratorConfig {
  uint64_t start_hz;
  uint64_t cw_hz;
  uint32_t total_steps;
  uint64_t step_hz;
  Attenuation attenuation;
  PowerLevel power_level;
  uint16_t sweep_power_steps;
  Attenuation start_attenuation;
  PowerLevel start_power_level;
  Attenuation stop_attenuation;
  PowerLevel stop_power_level;
  RfPower rf_power;
  uint64_t sweep_delay_ms;
} SignalGeneratorConfig;
typedef struct SignalGeneratorConfigAmpSweep {
  uint64_t cw_hz;
  uint16_t sweep_power_steps;
  Attenuation start_attenuation;
  PowerLevel start_power_level;
  Attenuation stop_attenuation;
  PowerLevel stop_power_level;
  RfPower rf_power;
  uint64_t sweep_delay_ms;
} SignalGeneratorConfigAmpSweep;
typedef struct SignalGeneratorConfigCw {
  uint64_t cw_hz;
  uint32_t total_steps;
  uint64_t step_freq_hz;
  Attenuation attenuation;
  PowerLevel power_level;
  RfPower rf_power;
} SignalGeneratorConfigCw;
typedef struct SignalGeneratorConfigFreqSweep {
  uint64_t start_hz;
  uint32_t total_steps;
  uint64_t step_hz;
  Attenuation attenuation;
  PowerLevel power_level;
  RfPower rf_power;
  uint64_t sweep_delay_ms;
} SignalGeneratorConfigFreqSweep;
typedef struct SpectrumAnalyzerConfig {
  uint64_t start_freq_hz;
  uint64_t step_size_hz;
  uint64_t stop_freq_hz;
  uint64_t center_freq_hz;
  uint64_t span_hz;
  int16_t max_amp_dbm;
  int16_t min_amp_dbm;
  uint16_t sweep_len;
  bool is_expansion_radio_module_active;
  Mode mode;
  uint64_t min_freq_hz;
  uint64_t max_freq_hz;
  uint64_t max_span_hz;
  uint64_t rbw_hz;
  int8_t amp_offset_db;
  CalcMode calc_mode;
} SpectrumAnalyzerConfig;
enum Result rfe_signal_generator_start_tracking_exp(const struct SignalGenerator *rfe,
                                                    uint64_t start_hz,
                                                    double power_dbm,
                                                    uint16_t sweep_steps,
                                                    uint64_t step_hz);
enum Result rfe_signal_generator_tracking_step(const struct SignalGenerator *rfe, uint16_t steps);
void rfe_signal_generator_set_config_callback(const struct SignalGenerator *rfe,
                                              void (*callback)(struct SignalGeneratorConfig config,
                                                               void *user_data),
                                              void *user_data);
void rfe_signal_generator_remove_config_callback(const struct SignalGenerator *rfe);
void rfe_signal_generator_set_config_amp_sweep_callback(const struct SignalGenerator *rfe,
                                                        void (*callback)(struct SignalGeneratorConfigAmpSweep config,
                                                                         void *user_data),
                                                        void *user_data);
void rfe_signal_generator_remove_config_amp_sweep_callback(const struct SignalGenerator *rfe);
void rfe_signal_generator_set_config_cw_callback(const struct SignalGenerator *rfe,
                                                 void (*callback)(struct SignalGeneratorConfigCw config,
                                                                  void *user_data),
                                                 void *user_data);
void rfe_signal_generator_remove_config_cw_callback(const struct SignalGenerator *rfe);
void rfe_signal_generator_set_config_freq_sweep_callback(const struct SignalGenerator *rfe,
                                                         void (*callback)(struct SignalGeneratorConfigFreqSweep config,
                                                                          void *user_data),
                                                         void *user_data);
void rfe_signal_generator_remove_config_freq_sweep_callback(const struct SignalGenerator *rfe);
enum Result rfe_signal_generator_rf_power_on(const struct SignalGenerator *rfe);
enum Result rfe_signal_generator_rf_power_off(const struct SignalGenerator *rfe);
enum Result rfe_spectrum_analyzer_model_name(SpectrumAnalyzerModel model,
                                             char *name_buf,
                                             uintptr_t len);
bool rfe_spectrum_analyzer_model_is_plus_model(SpectrumAnalyzerModel model);
bool rfe_spectrum_analyzer_model_has_wifi_analyzer(SpectrumAnalyzerModel model);
uint64_t rfe_spectrum_analyzer_model_min_freq_hz(SpectrumAnalyzerModel model);
uint64_t rfe_spectrum_analyzer_model_max_freq_hz(SpectrumAnalyzerModel model);
uint64_t rfe_spectrum_analyzer_model_min_span_hz(SpectrumAnalyzerModel model);
uint64_t rfe_spectrum_analyzer_model_max_span_hz(SpectrumAnalyzerModel model);
struct SpectrumAnalyzer *rfe_spectrum_analyzer_connect(void);
struct SpectrumAnalyzer *rfe_spectrum_analyzer_connect_with_name_and_baud_rate(const char *name,
                                                                               uint32_t baud_rate);
void rfe_spectrum_analyzer_free(struct SpectrumAnalyzer *rfe);
enum Result rfe_spectrum_analyzer_send_bytes(const struct SpectrumAnalyzer *rfe,
                                             const uint8_t *bytes,
                                             uintptr_t len);
void rfe_spectrum_analyzer_set_sweep_callback(const struct SpectrumAnalyzer *rfe,
                                              void (*callback)(const float *sweep,
                                                               uintptr_t sweep_len,
                                                               uint64_t start_hz,
                                                               uint64_t stop_hz,
                                                               void *user_data),
                                              void *user_data);
void rfe_spectrum_analyzer_set_config_callback(const struct SpectrumAnalyzer *rfe,
                                               void (*callback)(struct SpectrumAnalyzerConfig config,
                                                                void *user_data),
                                               void *user_data);