ffi/include/NativeMethods.g.cs


        /// <summary>
        ///  Starts tracking mode using the expansion module.
        ///
        ///  `start_hz` and `step_hz` are represented in hertz.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_start_tracking_exp", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_start_tracking_exp(SignalGenerator* rfe, ulong start_hz, double power_dbm, ushort sweep_steps, ulong step_hz);

        /// <summary>
        ///  Jumps to a new frequency using the tracking step frequency.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_tracking_step", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_tracking_step(SignalGenerator* rfe, ushort steps);

        /// <summary>
        ///  Sets the callback called when the main signal generator configuration is received.
        ///
        ///  The callback may be invoked from a background thread, and multiple callback
        ///  invocations may overlap. `user_data`, if non-NULL, must remain valid until
        ///  the callback is removed or the signal generator is freed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_set_config_callback", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_signal_generator_set_config_callback(SignalGenerator* rfe, delegate* unmanaged[Cdecl]<SignalGeneratorConfig, void*, void> callback, void* user_data);

        /// <summary>
        ///  Removes the main configuration callback.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_remove_config_callback", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_signal_generator_remove_config_callback(SignalGenerator* rfe);

        /// <summary>
        ///  Sets the callback called when an amplitude sweep configuration is received.
        ///
        ///  The callback may be invoked from a background thread, and multiple callback
        ///  invocations may overlap. `user_data`, if non-NULL, must remain valid until
        ///  the callback is removed or the signal generator is freed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_set_config_amp_sweep_callback", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_signal_generator_set_config_amp_sweep_callback(SignalGenerator* rfe, delegate* unmanaged[Cdecl]<SignalGeneratorConfigAmpSweep, void*, void> callback, void* user_data);

        /// <summary>
        ///  Removes the amplitude sweep configuration callback.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_remove_config_amp_sweep_callback", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_signal_generator_remove_config_amp_sweep_callback(SignalGenerator* rfe);

        /// <summary>
        ///  Sets the callback called when a CW configuration is received.
        ///
        ///  The callback may be invoked from a background thread, and multiple callback
        ///  invocations may overlap. `user_data`, if non-NULL, must remain valid until
        ///  the callback is removed or the signal generator is freed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_set_config_cw_callback", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_signal_generator_set_config_cw_callback(SignalGenerator* rfe, delegate* unmanaged[Cdecl]<SignalGeneratorConfigCw, void*, void> callback, void* user_data);

        /// <summary>
        ///  Removes the CW configuration callback.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_remove_config_cw_callback", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_signal_generator_remove_config_cw_callback(SignalGenerator* rfe);

        /// <summary>
        ///  Sets the callback called when a frequency sweep configuration is received.
        ///
        ///  The callback may be invoked from a background thread, and multiple callback
        ///  invocations may overlap. `user_data`, if non-NULL, must remain valid until
        ///  the callback is removed or the signal generator is freed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_set_config_freq_sweep_callback", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_signal_generator_set_config_freq_sweep_callback(SignalGenerator* rfe, delegate* unmanaged[Cdecl]<SignalGeneratorConfigFreqSweep, void*, void> callback, void* user_data);

        /// <summary>
        ///  Removes the frequency sweep configuration callback.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_remove_config_freq_sweep_callback", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_signal_generator_remove_config_freq_sweep_callback(SignalGenerator* rfe);

        /// <summary>
        ///  Turns RF output power on.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_rf_power_on", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_rf_power_on(SignalGenerator* rfe);

        /// <summary>
        ///  Turns RF output power off.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_signal_generator_rf_power_off", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_signal_generator_rf_power_off(SignalGenerator* rfe);

        /// <summary>
        ///  Writes the display name of a spectrum analyzer model.
        ///
        ///  `name_buf` must point to a writable buffer of at least `len` bytes. The
        ///  buffer receives a null-terminated C string. Returns
        ///  `RESULT_INVALID_INPUT_ERROR` if `len` is too small or `model` is invalid.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_model_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_model_name(SpectrumAnalyzerModel model, byte* name_buf, nuint len);

        /// <summary>
        ///  Returns whether the model supports Plus-model features.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_model_is_plus_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool rfe_spectrum_analyzer_model_is_plus_model(SpectrumAnalyzerModel model);

        /// <summary>
        ///  Returns whether the model supports Wi-Fi analyzer mode.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_model_has_wifi_analyzer", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool rfe_spectrum_analyzer_model_has_wifi_analyzer(SpectrumAnalyzerModel model);

        /// <summary>
        ///  Returns the model's minimum supported input frequency in hertz.
        ///
        ///  Returns zero if `model` is invalid.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_model_min_freq_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_model_min_freq_hz(SpectrumAnalyzerModel model);

        /// <summary>
        ///  Returns the model's maximum supported input frequency in hertz.
        ///
        ///  Returns zero if `model` is invalid.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_model_max_freq_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_model_max_freq_hz(SpectrumAnalyzerModel model);

        /// <summary>
        ///  Returns the model's minimum supported sweep span in hertz.
        ///
        ///  Returns zero if `model` is invalid.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_model_min_span_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_model_min_span_hz(SpectrumAnalyzerModel model);

        /// <summary>
        ///  Returns the model's maximum supported sweep span in hertz.
        ///
        ///  Returns zero if `model` is invalid.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_model_max_span_hz", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong rfe_spectrum_analyzer_model_max_span_hz(SpectrumAnalyzerModel model);

        /// <summary>
        ///  Connects to the first RF Explorer spectrum analyzer found on a CP210x USB serial port.
        ///
        ///  Returns `NULL` if no compatible device can be opened and initialized. The
        ///  returned pointer is owned by the caller and must be freed with
        ///  `rfe_spectrum_analyzer_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_connect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SpectrumAnalyzer* rfe_spectrum_analyzer_connect();

        /// <summary>
        ///  Connects to a named serial port using the given baud rate.
        ///
        ///  `name` must be a valid null-terminated UTF-8 string. Returns `NULL` if the
        ///  pointer is null, the string is invalid, or the device cannot be opened and
        ///  initialized. The returned pointer is owned by the caller and must be freed
        ///  with `rfe_spectrum_analyzer_free`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_connect_with_name_and_baud_rate", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SpectrumAnalyzer* rfe_spectrum_analyzer_connect_with_name_and_baud_rate(byte* name, uint baud_rate);

        /// <summary>
        ///  Frees a spectrum analyzer returned by `rfe_spectrum_analyzer_connect`.
        ///
        ///  Passing `NULL` is allowed and has no effect.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void rfe_spectrum_analyzer_free(SpectrumAnalyzer* rfe);

        /// <summary>
        ///  Sends raw bytes to the spectrum analyzer.
        ///
        ///  `bytes` must point to at least `len` bytes. This function is primarily for
        ///  advanced users that need to send RF Explorer commands not wrapped by this API.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "rfe_spectrum_analyzer_send_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Result rfe_spectrum_analyzer_send_bytes(SpectrumAnalyzer* rfe, byte* bytes, nuint len);
